# made-cpp-2020-hw

chuck_allocator/: chunck_allocator.cpp
classify double/: solution.c
list/: CMakeLists.txt
list/src/: list.cpp  list.h
matrix/src/: matrix.cpp  matrix.h
simple_compose/src/: main.cpp
smart_pointers/src/: smart_pointers.h  smart_pointers.tpp
vector_operations/src/: vector_ops.h
